initial support for pack_ns on library rule

--- a/bytecomp/BUILD.bazel
+++ b/bytecomp/BUILD.bazel
@@ -422,7 +422,10 @@ bootstrap_module(
         "//typing:Env",
     ],
     data = ["//runtime:primitives"],
-    visibility = ["//tools:__pkg__"]
+    visibility = [
+        "//otherlibs/dynlink:__pkg__",
+        "//tools:__pkg__"
+    ]
 )
 
 bootstrap_signature(
