--- a/lambda/BUILD.bazel
+++ b/lambda/BUILD.bazel
@@ -83,6 +83,7 @@ bootstrap_module(
         "//asmcomp:__pkg__",
         "//bytecomp:__pkg__",
         "//middle_end:__subpackages__",
+        "//otherlibs/dynlink:__pkg__",
     ]
 )
 
@@ -122,6 +123,7 @@ bootstrap_module(
         "//bytecomp:__pkg__",
         "//file_formats:__pkg__",
         "//middle_end:__subpackages__",
+        "//otherlibs/dynlink:__pkg__",
         "//typing:__pkg__",
     ],
 )
