--- a/typing/BUILD.bazel
+++ b/typing/BUILD.bazel
@@ -174,16 +174,11 @@ bootstrap_module(
         ":Ident",
         ":Path",
         ":Types",
-        #### (MethSet)
-        #### (Meths)
-        #### (TransientTypeOps)
-        #### (Transient_expr)
-        #### (VarSet)
-        #### (Vars)
     ],
     visibility = [
         "//bytecomp:__pkg__",
         "//lambda:__pkg__",
+        "//otherlibs/dynlink:__pkg__",
         "//toplevel:__pkg__"
     ]
 )
@@ -313,7 +308,10 @@ bootstrap_module(
         #### (Uid)
         #### (Variance)
     ],
-    visibility = ["//toplevel:__pkg__"]
+    visibility = [
+        "//otherlibs/dynlink:__pkg__",
+        "//toplevel:__pkg__"
+    ]
 )
 
 bootstrap_signature(
@@ -372,6 +370,7 @@ bootstrap_module(
         "//lambda:__pkg__",
         "//middle_end:__pkg__",
         "//middle_end/closure:__pkg__",
+        "//otherlibs/dynlink:__pkg__",
         "//toplevel:__subpackages__",
     ]
 )
@@ -799,7 +798,10 @@ bootstrap_signature(
         "//stdlib:Stdlib.Format",
         ":Type_immediacy",
     ],
-    visibility = ["//toplevel:__subpackages__"]
+    visibility = [
+        "//otherlibs/dynlink:__pkg__",
+        "//toplevel:__subpackages__"
+    ]
 )
 
 bootstrap_module(
@@ -887,6 +889,7 @@ bootstrap_module(
         "//lambda:__pkg__",
         "//middle_end:__pkg__",
         "//middle_end/closure:__pkg__",
+        "//otherlibs/dynlink:__pkg__",
         "//tools:__pkg__",
         "//toplevel:__subpackages__",
     ]
@@ -965,7 +968,10 @@ bootstrap_module(
         "//utils:Misc",
         "//utils:Warnings",
     ],
-    visibility = ["//toplevel:__pkg__"]
+    visibility = [
+        "//otherlibs/dynlink:__pkg__",
+        "//toplevel:__pkg__"
+    ]
 )
 
 bootstrap_signature(
@@ -1047,6 +1053,7 @@ bootstrap_module(
         "//bytecomp:__pkg__",
         "//lambda:__pkg__",
         "//middle_end:__subpackages__",
+        "//otherlibs/dynlink:__pkg__",
     ]
 )
 
@@ -1258,6 +1265,9 @@ bootstrap_module(
         ":Ident",
         "//typing:Path",
         "//utils:Identifiable"
+    ],
+    visibility = [
+        "//otherlibs/dynlink:__pkg__",
     ]
 )
 
@@ -1362,7 +1372,10 @@ bootstrap_module(
         #### (Uid)
         #### (Vars)
     ],
-    visibility = ["//bytecomp:__pkg__"]
+    visibility = [
+        "//bytecomp:__pkg__",
+        "//otherlibs/dynlink:__pkg__",
+    ]
 )
 
 bootstrap_signature(
@@ -1455,7 +1468,10 @@ bootstrap_module(
     opts = MODULE_OPTS,
     primitives = PRIMITIVES,
     deps   = STDLIB + [
-        "//parsing:Builtin_attributes"
+        "//parsing:Builtin_attributes",
+    ],
+    visibility = [
+        "//otherlibs/dynlink:__pkg__",
     ]
 )
 
@@ -2089,6 +2105,7 @@ bootstrap_module(
         "//file_formats:__pkg__",
         "//lambda:__pkg__",
         "//middle_end:__pkg__",
+        "//otherlibs/dynlink:__pkg__",
         "//toplevel:__subpackages__"
     ]
 )
