--- a/config/pack/BUILD.bazel
+++ b/config/pack/BUILD.bazel
@@ -1,8 +1,14 @@
 load("@bazel_skylib//rules:common_settings.bzl",
-     "string_flag")
+     "bool_flag", "string_flag")
 
 string_flag(
     name = "ns",
     build_setting_default = "null",
+    visibility = ["//visibility:public"]
+)
+
+bool_flag(
+    name = "dynlink",
+    build_setting_default = False,
     visibility = ["//visibility:public"]
 )
